...
            "state": "translated",
            "value": "Varnostna kopija"
          }
        }
      }
    },
    "Backup and data": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Sicherung und Daten"
...
            "state": "translated",
            "value": "Četrti"
          }
        }
      }
    },
    "Free, whatever you decide": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Kostenlos, wie du dich auch entscheidest"
...
            "state": "translated",
            "value": "Ni delovni dan."
          }
        }
      }
    },
    "Not now": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Jetzt nicht"
...
            "state": "translated",
            "value": "Nastavi"
          }
        }
      }
    },
    "Settings": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Einstellungen"
...
            "state": "translated",
            "value": "Vrsta"
          }
        }
      }
    },
    "Unlock Zeitkonto Pro": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Zeitkonto Pro freischalten"
...
            "state": "translated",
            "value": "Tvoj lastni iCloud"
          }
        }
      }
    },
    "Zeitkonto Pro": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Zeitkonto Pro"
...
